- Bug Fix (472): Better framewriter error messages
- Bug Fix (985): Fix daqd for single-machine framebuilder in kernel 3.2
- Bug Fix (1010): Prevent divide-by-zero error in daqd filesys.hh
- Bug Fix (513): Cleanup debug schemes.  Also created separate udp_rcvr files, fixed mx_rcvr header
- Bug Fix (1015): Update daqd,nds build for ldas-tools 2.5
==================================================================================================
Changes for 3.0.3
==================================================================================================
- Bug Fix for loading individual filter coeffs (#1008 and #1014).
==================================================================================================
Changes for 3.0.2
==================================================================================================
- Bug Fix to SUM.pm part connection checking.
- Bug Fix to auto-generated ADC monitor screens. Screens for models which use several top level
  signal names were not being generated correctly.
==================================================================================================
Changes for 3.0.1
==================================================================================================
- Bug Fix (957): Phase locked oscillator 
- Bug Fix (1005): GPS part: GPS second being sent to user code 1 cycle late.
- Bug Fix (832): Dataviewer -r <restorefile> command line option fixed.
- Bug Fix (999): start script does not error out if real-time model killed 
- Bug Fix (1000): ccodeio.h now uses environment variables in file paths
==================================================================================================
Changes for 3.0
==================================================================================================
- New Decimation filters for IOP to 16K as per T1600066.
- Bug Fix (973): HWWD.pm part updated to reflect new status bit pattern from updated SUS HWWD
	chassis.