@@ -10,6 +10,7 @@ Changes for X.X
 - Bug Fix (1010): Prevent divide-by-zero error in daqd filesys.hh
 - Bug Fix (513): Cleanup debug schemes.  Also created separate udp_rcvr files, fixed mx_rcvr header
 - Bug Fix (1015): Update daqd,nds build for ldas-tools 2.5
+- Bug Fix (1022): Allow dataviewer to display trends of double precision channels.
 ==================================================================================================
 Changes for 3.0.3
 ==================================================================================================
